...
                                </connections>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" id="CqK-zS-3xz">
                        <barButtonItem key="rightBarButtonItem" title="Log In" id="dcx-n1-TqU">
                            <connections>
                                <segue destination="4S7-15-TRy" kind="presentation" id="SsG-A8-stj"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="aXk-KO-JB7">
                                <rect key="frame" x="32" y="196" width="311" height="121"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="kca-dh-Atc">
                                        <rect key="frame" x="0.0" y="0.0" width="311" height="60"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xpa-il-34n">
                                                <rect key="frame" x="0.0" y="0.0" width="311" height="30"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yfn-6W-rP0">
                                                <rect key="frame" x="0.0" y="30" width="311" height="30"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                            </textField>
                                        </subviews>
...
